# db/schema.rb
@@ -10,85 +10,85 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 20_230_722_133_643) do
+ActiveRecord::Schema[7.0].define(version: 2023_07_25_171318) do
   # These are extensions that must be enabled in order to support this database
-  enable_extension 'plpgsql'
+  enable_extension "plpgsql"
 
-  create_table 'active_admin_comments', force: :cascade do |t|
-    t.string 'namespace'
-    t.text 'body'
-    t.string 'resource_type'
-    t.bigint 'resource_id'
-    t.string 'author_type'
-    t.bigint 'author_id'
-    t.datetime 'created_at', null: false
-    t.datetime 'updated_at', null: false
-    t.index %w[author_type author_id], name: 'index_active_admin_comments_on_author'
-    t.index ['namespace'], name: 'index_active_admin_comments_on_namespace'
-    t.index %w[resource_type resource_id], name: 'index_active_admin_comments_on_resource'
+  create_table "active_admin_comments", force: :cascade do |t|
+    t.string "namespace"
+    t.text "body"
+    t.string "resource_type"
+    t.bigint "resource_id"
+    t.string "author_type"
+    t.bigint "author_id"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["author_type", "author_id"], name: "index_active_admin_comments_on_author"
+    t.index ["namespace"], name: "index_active_admin_comments_on_namespace"
+    t.index ["resource_type", "resource_id"], name: "index_active_admin_comments_on_resource"
   end
 
-  create_table 'admin_users', force: :cascade do |t|
-    t.string 'email', default: '', null: false
-    t.string 'encrypted_password', default: '', null: false
-    t.string 'reset_password_token'
-    t.datetime 'reset_password_sent_at'
-    t.datetime 'remember_created_at'
-    t.datetime 'created_at', null: false
-    t.datetime 'updated_at', null: false
-    t.index ['email'], name: 'index_admin_users_on_email', unique: true
-    t.index ['reset_password_token'], name: 'index_admin_users_on_reset_password_token', unique: true
+  create_table "admin_users", force: :cascade do |t|
+    t.string "email", default: "", null: false
+    t.string "encrypted_password", default: "", null: false
+    t.string "reset_password_token"
+    t.datetime "reset_password_sent_at"
+    t.datetime "remember_created_at"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["email"], name: "index_admin_users_on_email", unique: true
+    t.index ["reset_password_token"], name: "index_admin_users_on_reset_password_token", unique: true
   end
 
-  create_table 'contacts', force: :cascade do |t|
-    t.string 'description'
-    t.string 'email'
-    t.string 'telephone01'
-    t.string 'telephone02'
-    t.boolean 'main'
-    t.bigint 'customer_id', null: false
-    t.datetime 'created_at', null: false
-    t.datetime 'updated_at', null: false
-    t.index ['customer_id'], name: 'index_contacts_on_customer_id'
+  create_table "contacts", force: :cascade do |t|
+    t.string "description"
+    t.string "email"
+    t.string "telephone01"
+    t.string "telephone02"
+    t.boolean "main"
+    t.bigint "customer_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["customer_id"], name: "index_contacts_on_customer_id"
   end
 
-  create_table 'customers', force: :cascade do |t|
-    t.string 'fantasy_name'
-    t.string 'customer_name'
-    t.string 'tax_id'
-    t.boolean 'status'
-    t.string 'state_registration'
-    t.datetime 'created_at', null: false
-    t.datetime 'updated_at', null: false
+  create_table "customers", force: :cascade do |t|
+    t.string "fantasy_name"
+    t.string "customer_name"
+    t.string "tax_id"
+    t.boolean "status"
+    t.string "state_registration"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
   end
 
-  create_table 'customers_operations', id: false, force: :cascade do |t|
-    t.bigint 'customer_id', null: false
-    t.bigint 'operation_id', null: false
-    t.index ['customer_id'], name: 'index_customers_operations_on_customer_id'
-    t.index ['operation_id'], name: 'index_customers_operations_on_operation_id'
+  create_table "customers_operations", id: false, force: :cascade do |t|
+    t.bigint "customer_id", null: false
+    t.bigint "operation_id", null: false
+    t.index ["customer_id"], name: "index_customers_operations_on_customer_id"
+    t.index ["operation_id"], name: "index_customers_operations_on_operation_id"
   end
 
-  create_table 'facilities', force: :cascade do |t|
-    t.string 'cep'
-    t.string 'complement'
-    t.string 'number'
-    t.string 'city'
-    t.string 'state'
-    t.string 'country'
-    t.string 'description'
-    t.bigint 'customer_id', null: false
-    t.datetime 'created_at', null: false
-    t.datetime 'updated_at', null: false
-    t.index ['customer_id'], name: 'index_facilities_on_customer_id'
+  create_table "facilities", force: :cascade do |t|
+    t.string "cep"
+    t.string "complement"
+    t.string "number"
+    t.string "city"
+    t.string "state"
+    t.string "country"
+    t.string "description"
+    t.bigint "customer_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["customer_id"], name: "index_facilities_on_customer_id"
   end
 
-  create_table 'operations', force: :cascade do |t|
-    t.string 'description'
-    t.datetime 'created_at', null: false
-    t.datetime 'updated_at', null: false
+  create_table "operations", force: :cascade do |t|
+    t.string "description"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
   end
 
-  add_foreign_key 'contacts', 'customers'
-  add_foreign_key 'facilities', 'customers'
+  add_foreign_key "contacts", "customers"
+  add_foreign_key "facilities", "customers"
 end
